@@ -6,6 +6,7 @@
   * Fixed a deadlock condition that could occur during a DRXFile.offset()
   * Fixed a bug in the DRXFile when dealing with small gaps in the data
   * Updated lsl.reader.errors.SyncError to allow for reporting of non-Mark5C problems
+  * Update the documentation for lsl.common.idf, sdf, and sdfADP
 
 2.0.0
   * Major API changes to put LSL under a uniform coding style
